--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div id="unity-footer">
         <div id="unity-webgl-logo"></div>
         <div id="unity-fullscreen-button"></div>
-        <div id="unity-build-title">Dots Mesh Slicer</div>
+        <div id="unity-build-title">Jujutus Ninja</div>
       </div>
     </div>
     <script>
@@ -63,8 +63,8 @@
         codeUrl: buildUrl + "/Dot slicer.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
-        productName: "Dots Mesh Slicer",
-        productVersion: "0.1.0",
+        productName: "Jujutus Ninja",
+        productVersion: "1.1.0",
         showBanner: unityShowBanner,
       };
 
