--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | Jujustsu Ninja</title>
+    <title>Unity WebGL Player | Jujutsu Ninja</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
@@ -20,7 +20,7 @@
       <div id="unity-footer">
         <div id="unity-webgl-logo"></div>
         <div id="unity-fullscreen-button"></div>
-        <div id="unity-build-title">Jujutus Ninja</div>
+        <div id="unity-build-title">Jujutsu Ninja</div>
       </div>
     </div>
     <script>
@@ -62,8 +62,8 @@
         frameworkUrl: buildUrl + "/Dot slicer.framework.js.unityweb",
         codeUrl: buildUrl + "/Dot slicer.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
-        companyName: "DefaultCompany",
-        productName: "Jujutus Ninja",
+        companyName: "bbkuan",
+        productName: "Jujutsu Ninja",
         productVersion: "1.1.0",
         showBanner: unityShowBanner,
       };
