try to add preview image

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Unity WebGL Player | Jujutsu Ninja</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
+
+    <meta property="og:image" content="https://i.imgur.com/8jdDrYO_d.webp?maxwidth=520">
+    <meta property="og:description" content="Hello World">
   </head>
   <body>
     <div id="unity-container" class="unity-desktop">
