--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player || Jujutsu Ninja</title>
+    <title>Jujutsu Ninja</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
 
-    <meta property="og:image" content="https://i.imgur.com/8jdDrYO_d.webp?maxwidth=520">
-    <meta property="og:description" content="Hello World">
+    <meta property="og:image" content="https://imgur.com/7050f06a-28be-41e3-b493-a0bf9d15a1a0">
+    <meta property="og:description" content="Just made the jujutsu game for no reason">
   </head>
   <body>
     <div id="unity-container" class="unity-desktop">
