--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
 
-    <meta property="og:image" content="https://imgur.com/7050f06a-28be-41e3-b493-a0bf9d15a1a0">
-    <meta property="og:description" content="Just made the jujutsu game for no reason">
+    <meta property="og:image" content="https://i.imgur.com/EqfiCVv.png">
+    <meta property="og:description" content="Made the jujutsu game for no reason">
   </head>
   <body>
     <div id="unity-container" class="unity-desktop">
